Fixed two CSS bugs fixed parent nav wrong color bug

--- a/css/template.css
+++ b/css/template.css
@@ -371,6 +371,9 @@ ul.menu > li > a { display: inline-block; vertical-align: middle; padding: 8px 1
 ul.menu > li:hover > ul { opacity: 1; top: 30px; left: 0; }
 ul.menu > li > ul > li:hover ul { opacity: 1; top: 36px; left: 300px; }
 
+/* Items with deeper subitems*/
+ul.menu > li.parent > a { } /*TODO: bold, arrow down to the right*/
+
 /* second and third level */
 ul.menu ul > li { display: block; display-display: block; display-padding: 10px 15px;}
 ul.menu ul > li a { display: block; padding: 10px 15px;text-decoration:none; }
